--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,26 @@
-/* .App {
-  text-align: center;
+.Header {
+  color: blueviolet;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body > div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-color:rgb(219, 224, 229);
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-.Prueba {
-  color: yellowgreen;
-
+.Answer {
+  color: rgb(191, 112, 112)
 }
